[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Albert Hahn <albert.hahn@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
