[tool.poetry]
name = "app"
version = "0.1.0-dev"
description = ""
authors = ["Albert Hahn <albert.hahn@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
coverage = "^7.4.4"
pre-commit = "^3.6.2"
python-semantic-release = "^9.1.1"

[tool.ruff]
ignore = ["E712"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
