[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["Albert Hahn <albert.hahn@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
coverage = "^7.4.4"
pre-commit = "^3.6.2"

[tool.ruff]
ignore = ["E712"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
